--- a/parkwhere-app/src/App.css
+++ b/parkwhere-app/src/App.css
@@ -9,7 +9,8 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /* animation: App-logo-spin infinite 20s linear; */
+    animation: App-logo-spin infinite 0.3s linear;
   }
 }
 
@@ -32,7 +33,22 @@
   from {
     transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+  25% {
+    transform: rotate(-1deg);
   }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(1deg);
+  }
+  to {
+    /* transform: rotate(360deg); */
+    transform: rotate(0deg);
+  }
+}
+
+.header {
+  background-color: #282c34;
+  color: white;
 }
