--- a/parkwhere-app/src/layouts/RootLayout.module.css
+++ b/parkwhere-app/src/layouts/RootLayout.module.css
@@ -95,40 +95,8 @@ a:active {
   background-color: var(--color-primary-light);
 }
 
-button {
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: none;
-  background-color: var(--color-primary-dark);
-  color: #fff;
-  font-size: 1.4rem;
-  font-weight: 700;
-  font-family: inherit;
-  cursor: pointer;
-  transition: all 0.2s ease-in;
-}
-
-button:hover {
-  background-color: var(--color-primary-dark);
-  background-color: var(--color-primary-light);
-  border: 1px solid var(--color-primary-dark);
-  color: var(--color-primary-dark);
-  transition: all 0.2s ease-in;
-}
-
 .container {
   max-width: 100%;
-}
-
-.header {
-  height: 5rem;
-
-  background-color: #fff;
-  border-bottom: var(--line);
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .content {
@@ -136,76 +104,10 @@ button:hover {
   gap: 2rem;
 }
 
-.sidebar {
-  flex: 0 0 200px;
-  margin-top: 2rem;
-  margin-left: 1rem;
-  text-transform: uppercase;
-}
-
-.side-menu {
-  list-style: none;
-  font-size: 1.4rem;
-  margin-top: 1.5rem;
-}
-
-.side-menu__item {
-  margin-bottom: 2rem;
-}
-
-.nav-item {
-  color: var(--color-primary-dark);
-  text-decoration: none;
-  padding: 8px 12px;
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
-}
-
-.nav-item-active {
-  color: var(--color-primary-dark);
-  text-decoration: none;
-  padding: 8px 12px;
-  background-color: var(--color-primary-light-2);
-  border-radius: 8px;
-}
-
 .main {
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-
-.customer-table {
-  border-collapse: collapse;
-  box-shadow: var(--shadow-light);
-}
-
-.customer-table thead tr {
-  background-color: var(--color-primary-dark);
-  color: #fff;
-  text-align: left;
-}
-
-.customer-table th,
-td {
-  padding: 20px 15px;
-}
-
-.customer-table tbody tr {
-  border-bottom: 1px solid #dddddd;
-}
-
-.customer-table tbody tr:nth-of-type(odd) {
-  background-color: #fff;
-}
-.customer-table tbody tr:nth-of-type(even) {
-  background-color: var(--color-primary-light);
-}
-
-.card {
-  padding: 20px;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: var(--shadow-light);
+  width: 200vh;
 }
 
 .menu-btn {
@@ -219,42 +121,11 @@ td {
   background-color: var(--color-primary-light);
 }
 
-.error {
-  padding: 2rem;
-  background-color: #fff5f5;
-  border: 1px solid #ff8787;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: #c92a2a;
-  margin-bottom: 2rem;
-}
-
-.success {
-  padding: 2rem;
-  background-color: #ebfbee;
-  border: 1px solid #69db7c;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: #2f9e44;
-  margin-bottom: 2rem;
-}
-
 .grid-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   align-items: center;
-}
-
-.search-input {
-  margin-right: 2rem;
-  padding: 10px 15px;
-  border-radius: 5px;
-  border: 1px solid #ddd;
-  font-family: inherit;
-  width: 300px;
 }
 
 .interaction-form {
