--- a/parkwhere-app/src/pages/Search.module.css
+++ b/parkwhere-app/src/pages/Search.module.css
@@ -7,3 +7,12 @@
   flex-direction: column;
   align-items: center;
 }
+
+.search-input {
+  margin-right: 2rem;
+  padding: 10px 15px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  font-family: inherit;
+  width: 300px;
+}
