improved light & dark mode
Tweak some CSS style, hope it look nicer now

--- a/parkwhere-app/src/components/Card.module.css
+++ b/parkwhere-app/src/components/Card.module.css
@@ -6,6 +6,9 @@
 }
 
 .dark {
-  background: #222;
-  color: #eee;
+  padding: 20px;
+  background: #f3f0ff;
+  border-radius: 10px;
+  box-shadow: var(--shadow-light);
+  color: #2d2d2d;
 }
