--- a/parkwhere-app/src/components/Button.module.css
+++ b/parkwhere-app/src/components/Button.module.css
@@ -1,8 +1,9 @@
 button {
   padding: 10px 20px;
+  margin: 10px;
   border-radius: 5px;
   border: none;
-  background-color: var(--color-primary-dark);
+  background-color: var(--color-primary);
   color: #fff;
   font-size: 1.8rem;
   font-weight: 500;
