--- a/parkwhere-app/src/pages/Search.module.css
+++ b/parkwhere-app/src/pages/Search.module.css
@@ -15,6 +15,12 @@ th {
   width: 400px;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .tableMain {
   position: relative;
 }
