PAR-45:Implement dark mode for inner Card and SideNav + fix small bugs

--- a/parkwhere-app/src/components/Card.module.css
+++ b/parkwhere-app/src/components/Card.module.css
@@ -7,7 +7,7 @@
 
 .dark {
   padding: 20px;
-  background: #f3f0ff;
+  background: var(--color-grey-dark-2);
   border-radius: 10px;
   box-shadow: var(--shadow-light);
   color: #2d2d2d;
