--- a/parkwhere-app/src/layouts/RootLayout.module.css
+++ b/parkwhere-app/src/layouts/RootLayout.module.css
@@ -12,8 +12,9 @@
   --color-grey-light-4: #ccc;
 
   --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
+  --color-grey-dark-2: #343f56;
+  --color-grey-dark-3: #777;
+  --color-grey-dark-4: #999;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
