--- a/parkwhere-app/src/pages/Favorites.module.css
+++ b/parkwhere-app/src/pages/Favorites.module.css
@@ -14,3 +14,16 @@ th {
 .address {
   width: 400px;
 }
+
+.dark {
+  background: var(--color-grey-dark-2);
+  border-radius: 10px;
+  box-shadow: var(--shadow-light);
+  color: var(--color-grey-light-3);
+  h1 {
+    color: var(--color-grey-light-1);
+  }
+  h2 {
+    color: var(--color-grey-light-4);
+  }
+}
