--- a/parkwhere-app/src/layouts/RootLayout.module.css
+++ b/parkwhere-app/src/layouts/RootLayout.module.css
@@ -4,7 +4,7 @@
   --color-primary: #378beb;
   --color-primary-light: #f3f0ff;
   --color-primary-light-2: #dbf4ff;
-  --color-primary-dark: #054a99;
+  --color-primary-dark: #236fc6;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
