Revert "Update RootLayout.module.css"
This reverts commit 681e2b123e71ffbb8c2cf1ec624770c17a0cd9d8.

--- a/parkwhere-app/src/layouts/RootLayout.module.css
+++ b/parkwhere-app/src/layouts/RootLayout.module.css
@@ -84,6 +84,12 @@ label {
   color: var(--color-grey-dark-2);
 }
 
+a:link,
+a:visited {
+  text-decoration: none;
+  color: var(--color-primary-dark);
+}
+
 .container {
   max-width: 100%;
 }
